<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="600px"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_corner_rect_solid_white"
        android:orientation="vertical"
        android:padding="40px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_display_name_in_group"
            android:textColor="@color/black0"
            android:textSize="18sp"/>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60px"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableBottom="@drawable/shape_bottom_green"
                android:gravity="bottom"
                android:textColorHint="@color/gray3"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:text="@string/set_your_display_name_in_group"
                android:textColor="@color/gray2"
                android:textSize="12sp"/>
        </com.zhy.autolayout.AutoLinearLayout>


        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80px"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/gray1"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tvOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40px"
                android:text="@string/sure"
                android:textColor="@color/green3"
                android:textSize="14sp"/>
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoFrameLayout>